diesel_compile_tests/tests/fail/as_changeset_missing_table_import.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `users`
 --> $DIR/as_changeset_missing_table_import.rs:5:8
  |
5 | struct User {
  |        ^^^^ use of undeclared crate or module `users`

error[E0433]: failed to resolve: use of undeclared crate or module `users`
  --> $DIR/as_changeset_missing_table_import.rs:11:23
   |
11 | #[diesel(table_name = users)]
   |                       ^^^^^ use of undeclared crate or module `users`
